--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,23 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+  {
+    "type": "firefox",
+    "request": "launch",
+    "reAttach": true,
+    "name": "Launch firefox",
+    "preLaunchTask": "npm: start",
+    "url": "http://localhost:4200/",
+    "webRoot": "${workspaceFolder}"
+  },
+  {
+    "type": "firefox",
+    "request": "launch",
+    "reAttach": true,
+    "name": "Launch firefox test",
+    "preLaunchTask": "npm: start",
+    "url": "http://localhost:9876/debug.html"
+  },
     {
       "name": "ng serve",
       "type": "chrome",
