2:20 and github readme title

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,12 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "./",
   },
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "disableTypeScriptVersionCheck": true
   }
 }
